@@ -1,6 +1,6 @@
 
 #define PACKAGE_NAME    "Qsampler"
-#define PACKAGE_VERSION "0.1.3.20"
+#define PACKAGE_VERSION "0.1.3.21"
 
 #define CONFIG_PREFIX   "."
 #define CONFIG_DEBUG    1
@@ -11,6 +11,7 @@
 #define CONFIG_MUTE_SOLO        1
 #define CONFIG_MIDI_INSTRUMENT  1
 #define CONFIG_AUDIO_ROUTING    1
+#define CONFIG_FXSEND           1
 
 #undef  HAVE_SIGNAL_H
 
